--- a/popup.html
+++ b/popup.html
@@ -2,200 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kuma Oracle</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+    /* Reset and basic styles */
     * {
       box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #1e1e1e;
-      color: #e0e0e0;
       margin: 0;
       padding: 0;
+    }
+    html, body {
       width: 600px;
       height: 600px;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #2c2c2c, #1a1a1a);
+      color: #e0e0e0;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
     }
-
+    /* Container styling */
     #container {
-      width: 100%;
-      height: 100%;
-      padding: 20px;
+      flex: 1;
       display: flex;
       flex-direction: column;
-      background-color: #2b2b2b;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
+      height: 100vh;
     }
-
+    /* Header styling */
     #header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
-      position: relative;
+      padding: 20px;
+      background-color: #1e1e1e;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-
-    #logo {
-      width: 50px;
-      height: auto;
-      cursor: pointer;
-    }
-
     h1 {
-      font-size: 24px;
+      font-size: 28px;
       font-weight: 700;
       color: #ffffff;
       margin: 0;
-      letter-spacing: 0.5px;
+      flex-grow: 1;
     }
-
-    #dropdown {
-      display: none;
-      position: absolute;
-      top: 60px;
-      right: 0;
-      background-color: #333;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-    }
-
-    #dropdown a {
-      color: #ffffff;
-      text-decoration: none;
-      padding: 10px 15px;
-      display: block;
-      font-size: 14px;
-      transition: background-color 0.3s ease;
-    }
-
-    #dropdown a:hover {
-      background-color: #444;
-    }
-
-    button {
-      background-color: #3e8ef7;
-      color: #ffffff;
-      border: none;
-      border-radius: 5px;
-      padding: 12px;
+    #settings-icon {
+      width: 30px;
+      height: 30px;
       cursor: pointer;
-      font-size: 16px;
-      font-weight: 500;
-      transition: all 0.3s ease;
-      margin-bottom: 20px;
     }
-
-    button:hover {
-      background-color: #1c70e4;
-    }
-
-    #output {
+    /* Main content styling */
+    #main-content {
       flex: 1;
       overflow-y: auto;
-      background-color: #202020;
-      border-radius: 8px;
-      padding: 15px;
-      margin-top: 10px;
-      color: #d3d3d3;
+      position: relative;
+      padding: 15px 30px 80px 30px; /* Reduced top padding */
     }
-
-    #status {
+    #output {
+      margin-top: 10px;
+    }
+    /* Placeholder text */
+    #placeholder-text {
+      text-align: center;
+      font-size: 18px;
+      font-style: italic;
+      color: #888888;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 80%; /* Set max-width to make it less wide */
+      margin: 0 auto; /* Center the placeholder text */
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* Header for timeframes */
+    #timeframe-header {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      padding: 20px; /* Restored padding */
+      background-color: #1e1e1e;
+      border-radius: 8px;
+      border: 1px solid #3a3a3a;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    #timeframe-header div {
+      flex: 1;
+      text-align: center;
+      padding: 10px;
+      border-radius: 5px;
+      margin: 0 5px;
       font-size: 16px;
       font-weight: 500;
-      color: #00b0ff;
-      margin-bottom: 10px;
-      text-align: center;
+      border: 1px solid #3a3a3a;
+      background-color: #2a2a2a;
+      color: #ffffff;
     }
-
+    /* Asset card styling */
     .asset {
-      padding: 15px;
-      background-color: #333;
+      background-color: #1e1e1e;
       border-radius: 8px;
-      margin-bottom: 15px;
-      transition: transform 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      margin-bottom: 20px;
+      padding: 20px;
+      cursor: pointer;
+      transition: background-color 0.2s ease, transform 0.2s ease;
+      border: 1px solid #3a3a3a;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-
     .asset:hover {
-      transform: scale(1.02);
+      background-color: #2a2a2a;
+      transform: translateY(-2px);
     }
-
     .asset-name {
-      font-size: 18px;
+      font-size: 22px;
       font-weight: 600;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      color: #ffffff;
     }
-
     .timeframe {
       display: flex;
       justify-content: space-between;
-      padding: 10px 0;
     }
-
-    .sta, .mta, .lta {
-      padding: 8px;
-      border-radius: 5px;
-      font-size: 14px;
+    .timeframe div {
+      flex: 1;
       text-align: center;
+      padding: 10px;
+      border-radius: 5px;
+      margin: 0 5px;
+      font-size: 16px;
+      font-weight: 500;
+      border: 1px solid #3a3a3a;
     }
-
     .bullish {
-      color: #00ff00;
-      background-color: #004d00;
+      background-color: rgba(0, 200, 0, 0.1);
+      color: #00c800;
     }
-
     .bearish {
-      color: #ff4d4d;
-      background-color: #4d0000;
+      background-color: rgba(200, 0, 0, 0.1);
+      color: #c80000;
     }
-
     .neutral {
-      color: #ffd700;
-      background-color: #4d4d00;
+      background-color: rgba(200, 200, 0, 0.1);
+      color: #c8c800;
     }
-
     .reason {
       display: none;
-      padding: 10px;
-      background-color: #282828;
-      border-radius: 5px;
-      margin-top: 10px;
-      font-size: 14px;
-      line-height: 1.5;
-      width: calc(100% - 20px);
-      box-sizing: border-box;
+      font-size: 16px;
+      line-height: 1.6;
+      color: #d0d0d0;
+      margin-top: 15px;
+      padding-top: 15px;
+      border-top: 1px solid #3a3a3a;
     }
-
-    .show {
-      display: block;
+    .reason p {
+      margin-bottom: 10px;
     }
-
-    .spinner {
+    .reason p strong {
+      color: #ffffff;
+    }
+    /* Spinner styling */
+    #loading-spinner {
       display: none;
-      border: 4px solid rgba(255, 255, 255, 0.3);
-      border-left-color: #00b0ff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .spinner {
+      border: 6px solid rgba(255, 255, 255, 0.2);
+      border-top-color: #ffffff;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 80px;
+      height: 80px;
       animation: spin 1s linear infinite;
-      margin: 0 auto;
-      margin-top: 20px;
     }
-
     @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+      to { transform: rotate(360deg); }
     }
-
+    /* Extract button styling */
+    #extract {
+      width: 100%;
+      background-color: #ffffff;
+      color: #1a1a1a;
+      border: none;
+      padding: 15px;
+      cursor: pointer;
+      font-size: 18px;
+      font-weight: 500;
+      transition: background-color 0.3s ease;
+      position: sticky;
+      bottom: 0;
+      left: 0;
+    }
+    #extract:hover {
+      background-color: #e0e0e0;
+    }
+    /* Settings popup styling */
     #settings-popup {
       display: none;
       position: fixed;
@@ -203,76 +208,109 @@
       left: 50%;
       transform: translate(-50%, -50%);
       width: 400px;
-      background-color: #333;
+      background-color: #2a2a2a;
       border-radius: 10px;
-      padding: 20px;
+      padding: 30px;
       z-index: 1000;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
     }
-
     #settings-popup h2 {
       color: #ffffff;
-      margin-bottom: 20px;
-      font-size: 18px;
+      margin-bottom: 25px;
+      font-size: 22px;
       text-align: center;
     }
-
     #settings-popup input {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
+      padding: 12px;
+      margin-bottom: 25px;
       border-radius: 5px;
       border: none;
-      background-color: #444;
+      background-color: #3a3a3a;
       color: #ffffff;
+      font-size: 16px;
     }
-
     #settings-popup button {
-      background-color: #3e8ef7;
-      color: #ffffff;
-      padding: 10px;
+      width: 100%;
+      background-color: #ffffff;
+      color: #1a1a1a;
+      padding: 12px;
       border-radius: 5px;
       border: none;
       cursor: pointer;
       font-weight: 500;
-      display: block;
-      margin: 0 auto;
+      font-size: 16px;
+      margin-bottom: 20px;
     }
-
+    #settings-popup button:hover {
+      background-color: #e0e0e0;
+    }
     #save-success-message {
-      color: #00ff00;
-      margin-top: 10px;
+      color: #00c800;
+      margin-top: 15px;
       text-align: center;
       display: none;
+      font-size: 16px;
     }
-
+    /* Close button for settings popup */
+    #close-settings {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 24px;
+      color: #ffffff;
+      cursor: pointer;
+    }
+    /* Overlay for settings popup */
+    #overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 600px;
+      height: 100vh;
+      background: rgba(26, 26, 26, 0.7);
+      z-index: 900;
+    }
   </style>
 </head>
 <body>
   <div id="container">
+    <!-- Header -->
     <div id="header">
       <h1>Kuma Oracle</h1>
-      <img src="icons/kuma.png" id="logo" alt="Kuma Capital Logo">
-      <div id="dropdown">
-        <a id="kuma-website" href="#">Kuma Website</a>
-        <a id="settings" href="#">Settings</a>
+      <!-- Settings Icon -->
+      <div id="settings-icon">
+        <!-- SVG Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-settings">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z"/>
+          <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0"/>
+        </svg>
       </div>
     </div>
-    <button id="extract">Extract & Analyze Content</button>
-
-    <div id="output">
-      <div id="status">Status: Waiting for action...</div>
-    <div id="loading-spinner" class="spinner"></div>
+    <!-- Main Content -->
+    <div id="main-content">
+      <div id="loading-spinner">
+        <div class="spinner"></div>
+      </div>
+      <div id="placeholder-text">Please navigate to a news article and click "Extract & Analyze Content" to begin.</div>
+      <div id="output"></div>
     </div>
-
-    <div id="settings-popup">
-      <h2>Settings</h2>
-      <input type="text" id="api-key-input" placeholder="Enter OpenAI API Key" />
-      <button id="save-api-key">Save API Key</button>
-      <div id="save-success-message">API Key saved successfully!</div>
+    <!-- Extract & Analyze Button -->
+    <button id="extract">Extract & Analyze Content</button>
+  </div>
+  <!-- Settings Popup -->
+  <div id="overlay"></div>
+  <div id="settings-popup">
+    <div id="close-settings">&times;</div>
+    <h2>Settings</h2>
+    <input type="password" id="api-key-input" placeholder="Enter OpenAI API Key" />
+    <button id="save-api-key">Save API Key</button>
+    <div id="save-success-message">API Key saved successfully!</div>
+    <div style="margin-top:20px; text-align:center;">
+      <a id="kuma-website" href="#" style="color:#ffffff; text-decoration:none; font-size:16px;">Kuma Capital X</a>
     </div>
   </div>
-
   <script src="popup.js"></script>
 </body>
 </html>
